sort spells by difficulty